fluxcd/clusters/pi/home/bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: home
  labels:
    app: bazarr
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      name: bazarr
      namespace: home
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:1.4.2
        ports:
        - containerPort: 6767
          name: bazarr-port

        volumeMounts:
          - name: bazarr-configs
            mountPath: /config
          - name: media-root
            mountPath: /media

      volumes:
        - name: bazarr-configs
          persistentVolumeClaim:
            claimName: bazarr-configs
        - name: media-root
          nfs:
            server: 192.168.86.10
            path: /nfs/media
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: home
spec:
  selector:
    app: bazarr
  ports:
  - name: bazarr-port
    port: 80
    targetPort: bazarr-port
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-ingress-route
  namespace: home
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.bazarr.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: bazarr
          port: 80
    - match: Host(`bazarr.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: bazarr
          port: 80
      # middlewares:
      #   - name: default-headers
  tls:
    secretName: local-fellowfreak-dev-production-tls
