fluxcd/clusters/pi/home/overseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: home
  labels:
    app: overseerr
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      name: overseerr
      namespace: home
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        image: lscr.io/linuxserver/overseerr:1.33.2
        ports:
        - containerPort: 5055
          name: overseerr-port

        volumeMounts:
          - name: overseerr-configs
            mountPath: /config

      volumes:
        - name: overseerr-configs
          persistentVolumeClaim:
            claimName: overseerr-configs

---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: home
spec:
  selector:
    app: overseerr
  ports:
  - name: overseerr-port
    port: 80
    targetPort: overseerr-port
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr-ingress-route
  namespace: home
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.requests.fellowfreak.dev`)
      kind: Rule
      services:
        - name: overseerr
          port: 80
    - match: Host(`requests.fellowfreak.dev`)
      kind: Rule
      services:
        - name: overseerr
          port: 80
      # middlewares:
      #   - name: default-headers
  tls:
    secretName: fellowfreak-dev-production-tls
